--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="title_activity_maps_kuliner_sate">Map</string>
     <string name="title_activity_maps_kuliner_sukun">Map</string>
     <string name="title_activity_maps_kuliner_tengiri">Map</string>
+    <string name="fasilitaskamaratrium">• AC\n• Air minum kemasan cuma-cuma\n• Pembuat kopi / teh\n• Minibar\n• Kulkas\n• Televisi\n• Desk\n• Brankas dalam kamar</string>
 </resources>
