--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,8 @@
     <!--mutiara-->
     <string name="mutiarasuperior">• AC\n• Air minum kemasan cuma-cuma\n• Pembuat kopi / teh\n• Televisi\n• Desk\n• Brankas dalam kamar\n• Minibar</string>
     <string name="mutiaradeluxe">• AC\n• Air minum kemasan cuma-cuma\n• Pembuat kopi / teh\n• Televisi\n• Desk\n• Brankas dalam kamar\n• Minibar\n• Free Newspaper</string>
+
+    <!--whiz-->
+    <string name="fasilitaswhiz">• AC\n• Air minum kemasan cuma-cuma\n• Pembuat kopi / teh\n• Televisi\n• Desk</string>
+
 </resources>
