--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <!--fave-->
     <string name="faveroom">• AC\n• Pembuat kopi / teh\n• Televisi\n• Desk\n• Brankas dalam kamar\n• Setrika</string>
     <string name="freshroom">• AC\n• Pembuat kopi / teh\n• Televisi\n• Desk\n• Brankas dalam kamar\n• Setrika</string>
-    <string name="fabroom">• AC\n• Pembuat kopi / teh\n• Televisi\n• Desk\n• Brankas dalam kamar\n• Setrik</string>
+    <string name="fabroom">• AC\n• Pembuat kopi / teh\n• Televisi\n• Desk\n• Brankas dalam kamar\n• Setrika</string>
 
     <!--hompremiere-->
     <string name="superior">• AC\n• Pembuat kopi / teh\n• Televisi\n• Desk\n• Air minum kemasan cuma-cuma</string>
